# bitsandbytes

./: CMakeLists.txt  CMakeLists_cpu.txt  README.md  environment.yml  requirements-dev.txt
baseline_rocm_enabled/bitsandbytes/: cextension.py  functional.py
baseline_rocm_enabled/bitsandbytes/nn/: modules.py
baseline_rocm_enabled/csrc/: kernels.hip.cpp  kernels.hip.h  ops.hip.cpp  pythonInterface.c
bitsandbytes/: cextension.py  cuda_specs.py  functional.py
bitsandbytes/autograd/: _functions.py
bitsandbytes/cuda_setup/: main.py
bitsandbytes/nn/: modules.py
bitsandbytes/optim/: adamw.py
bitsandbytes/research/autograd/: _functions.py
csrc/: common.cpp  common.hip.cpp  common.hip.cpp2  common.hip.h2  cpu_ops.cpp  cpu_ops.hip.cpp  cpu_ops.hip.cpp2  kernels.cuh  kernels.hip.cpp  kernels.hip.cpp2  kernels.hip.cu  kernels.hip.h2  kernels.hiph  ops.cuh  ops.hip  ops.hip.cpp  ops.hip.cpp2  ops.hip.cu  ops.hip.cuh  ops.hip.h  ops.hip.h2  pythonInterface.c  pythonInterface.cpp  pythonInterface.hip.cpp2
csrc-0.43/: common.hip.h  kernels.hip.cpp  ops.hip.h  pythonInterface.cpp
csrs-rocm/: cpu_ops.hip.cpp
include/: Portable.h
obsolete/: ops.cuh
tests/: test_autograd.py  test_cuda_setup_evaluator.py  test_functional.py  test_generation.py  test_linear4bit.py  test_modules.py  test_optim.py
